Fixed several responsiveness issues in members list
No issue

- Member email is cut off when overflowing on mobile
- Not displaying date moment-from-now and chevron on mobile
- Fixed left alignment issue for geolocation when there's no open rate

--- a/ghost/admin/app/styles/layouts/members.css
+++ b/ghost/admin/app/styles/layouts/members.css
@@ -321,7 +321,10 @@ p.gh-members-list-email {
     }
 
     .gh-list h3.gh-members-name-noname {
+        overflow: hidden;
         margin-top: -14px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .gh-members-subscribed-noname {
@@ -337,15 +340,21 @@ p.gh-members-list-email {
         padding: 0 0 0 64px;
     }
 
+    .gh-members-list-open-rate-noname {
+        margin-top: -32px;
+        padding-bottom: 16px;
+    }
+
     .gh-members-list-open-rate-mobile::after {
-        content: " open rate •";
+        content: " open rate • ";
+        white-space: pre;
     }
 
     .gh-members-list-geolocation {
         display: inline-block;
         width: auto;
         margin-top: -16px;
-        padding: 0 0 0 4px;
+        padding: 0;
     }
 
     .gh-members-list-geolocation::after {
@@ -355,6 +364,16 @@ p.gh-members-list-email {
     .gh-members-geolocation-noname {
         margin-top: -32px;
         padding-bottom: 16px;
+    }
+}
+
+@media (max-width: 600px) {
+    .gh-members-list-subscribed-moment {
+        display: none;
+    }
+    
+    .gh-members-list-chevron {
+        display: none;
     }
 }
 
